--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="Web site created using create-react-app" />
 
     <title>생일 추카 합니다</title>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_KEY%&libraries=services,clusterer"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
